[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scenes/thrishaStuff/images/cheerleader.png" type="Texture" id=2]
[ext_resource path="res://Scenes/thrishaStuff/Scripts/LunchLady.gd" type="Script" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]
[ext_resource path="res://Scenes/thrishaStuff/Scripts/MusicGeek.gd" type="Script" id=5]
[ext_resource path="res://Scenes/thrishaStuff/images/musicGeek.png" type="Texture" id=6]
[ext_resource path="res://Scenes/leoStuff/HUD/HUD.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/thrishaStuff/Audio/Cafeteria/Kevin MacLeodï¼š Airport Lounge.wav" type="AudioStream" id=8]
[ext_resource path="res://Scenes/thrishaStuff/Scripts/Cafeteria.gd" type="Script" id=9]
[ext_resource path="res://Scenes/mimistuff/alistair_animations/character.tscn" type="PackedScene" id=11]

[sub_resource type="CircleShape2D" id=3]
radius = 162.077

[sub_resource type="CircleShape2D" id=2]
radius = 162.077

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 546.5 )

[node name="Cafeteria" type="Node2D"]
script = ExtResource( 9 )

[node name="MusicGeek" type="Area2D" parent="."]
position = Vector2( 463, 816 )
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="MusicGeek"]
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="MusicGeek"]
scale = Vector2( 0.16, 0.16 )
texture = ExtResource( 6 )

[node name="QuestionMark" type="Sprite" parent="MusicGeek"]
position = Vector2( 0, -135 )
texture = ExtResource( 4 )

[node name="LunchLady" type="Area2D" parent="."]
position = Vector2( 1445, 838 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="LunchLady"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="LunchLady"]
scale = Vector2( 0.16, 0.16 )
texture = ExtResource( 2 )

[node name="QuestionMark" type="Sprite" parent="LunchLady"]
position = Vector2( 0, -135 )
texture = ExtResource( 4 )

[node name="player" parent="." instance=ExtResource( 11 )]
pause_mode = 2
position = Vector2( 1056, 715 )

[node name="HUD" parent="player" instance=ExtResource( 7 )]
position = Vector2( -158, -121 )
current = false
limit_left = 0
limit_top = 0
limit_right = 2225
limit_bottom = 0

[node name="rightBoundary" type="StaticBody2D" parent="."]
position = Vector2( 1944, 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="rightBoundary"]
position = Vector2( -4, 532.5 )
shape = SubResource( 1 )

[node name="leftBoundary" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="leftBoundary"]
position = Vector2( -4, 532.5 )
shape = SubResource( 1 )

[node name="CafeteriaAudio" type="AudioStreamPlayer2D" parent="."]
pause_mode = 2
position = Vector2( 980, 566 )
stream = ExtResource( 8 )

[connection signal="body_entered" from="MusicGeek" to="MusicGeek" method="_on_MusicGeek_body_entered"]
[connection signal="body_exited" from="MusicGeek" to="MusicGeek" method="_on_MusicGeek_body_exited"]
[connection signal="body_entered" from="LunchLady" to="LunchLady" method="_on_LunchLady_body_entered"]
[connection signal="body_exited" from="LunchLady" to="LunchLady" method="_on_LunchLady_body_exited"]
